--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <!-- Scrolling Team Profiles -->
     <section id="team-section">
         <div class="team-member step" id="member1">
-            <img src="Data/jason.jpg" alt="Jason Chang">
+            <img src="Data/jason.JPG" alt="Jason Chang">
             <h2>Jason Chang</h2>
             <p>Hi, my name is Jason. I'm exploring the link between economic prosperity and caloric consumption because understanding this relationship is crucial for international policy makers addressing food security and public health officials tackling nutrition-related disparities. Beyond this project, I'm deeply passionate about data science and corporate strategy. When I'm not immersed in data, you can find me training for my next upcoming marathon or playing golf. Feel free to check out some of my personal projects on my <a href = https://github.com/chan572> Github Profile </a> Click here to <a href="datasci209.html">learn more about economic prosperity and caloric consumption here</a></p>
         </div>
