ensuring nav bar works well

--- a/diet_fads.html
+++ b/diet_fads.html
@@ -8,21 +8,22 @@
   <script defer src="diet_fads.js"></script>
 </head>
 <body>
-  <!-- Navigation -->
-  <nav>
-    <div class="nav-container">
+<!-- Navigation Bar -->
+<nav>
+  <div class="nav-container">
       <a href="index.html">Home</a>
       <div class="dropdown">
-        <button class="dropbtn">Sections</button>
-        <div class="dropdown-content" id="dropdown-menu">
-          <a href="DataVizIndexProject.html">Caloric Supply</a>
-          <a href="gdp_calories.html">GDP & Calories</a>
-          <a href="demographics.html">Demographics</a>
-          <a href="diet_fads.html">Diet Fads</a>
-        </div>
+          <button class="dropbtn">Sections</button>
+          <div class="dropdown-content" id="dropdown-menu">
+              <a href="DataVizIndexProject.html">Caloric Supply</a>
+              <a href="datasci209.html">GDP & Calories</a>
+              <a href="demography_viz.html">Demographics</a>
+              <a href="diet_fads.html">Diet Fads</a>
+          </div>
       </div>
-    </div>
-  </nav>
+  </div>
+</nav>
+
 
   <!-- Intro Header -->
   <section class="intro">
