--- a/index.html
+++ b/index.html
@@ -9,21 +9,22 @@
     <script src="https://unpkg.com/scrollama"></script>
 </head>
 <body>
-    <!-- Navigation Bar -->
-    <nav>
-        <div class="nav-container">
-            <a href="index.html">Home</a>
-            <div class="dropdown">
-                <button class="dropbtn">Sections</button>
-                <div class="dropdown-content" id="dropdown-menu">
-                    <a href="DataVizIndexProject.html">Caloric Supply</a>
-                    <a href="datasci209.html">GDP & Calories</a>
-                    <a href="demographics.html">Demographics</a>
-                    <a href="diet_fads.html">Diet Fads</a>
-                </div>
+<!-- Navigation Bar -->
+<nav>
+    <div class="nav-container">
+        <a href="index.html">Home</a>
+        <div class="dropdown">
+            <button class="dropbtn">Sections</button>
+            <div class="dropdown-content" id="dropdown-menu">
+                <a href="DataVizIndexProject.html">Caloric Supply</a>
+                <a href="datasci209.html">GDP & Calories</a>
+                <a href="demography_viz.html">Demographics</a>
+                <a href="diet_fads.html">Diet Fads</a>
             </div>
         </div>
-    </nav>
+    </div>
+</nav>
+
 
     <!-- Static Top Team Overview -->
     <header class="intro">
