--- a/diet_fads.html
+++ b/diet_fads.html
@@ -37,28 +37,23 @@
     <p><strong>Peak Search Trend:</strong> <span id="diet-peak"></span></p>
   </section>
 
-  <section id="tableau-viz">
-    <h3>Interactive Visualizations</h3>
-    <div id="vizContainer1" style="width: 100%; height: 800px; margin-bottom: 60px;"></div>
-    <div id="vizContainer2" style="width: 100%; height: 800px;"></div>
-  </section>
+  <tableau-viz
+  id="tableauViz1"
+  src="https://public.tableau.com/views/FadDietsandFoodImports/FadDietTrendsandUSimports"
+  toolbar="bottom"
+  hide-tabs
+></tableau-viz>
 
-  <!-- Load Tableau then our script -->
-  <script src="https://public.tableau.com/javascripts/api/viz_v1.js"></script>
-  <script src="diet_fads.js"></script>
+<tableau-viz
+  id="tableauViz2"
+  src="https://public.tableau.com/views/GlobalandUSdiettrends/DietGeoTrends"
+  toolbar="bottom"
+  hide-tabs
+></tableau-viz>
 
-  <!-- Start script when DOM is ready -->
-  <script>
-    document.addEventListener("DOMContentLoaded", () => {
-      console.log("DOM loaded, calling initPage()");
-      if (typeof initPage === "function") {
-        initPage();
-      } else {
-        console.error("initPage is not defined.");
-      }
-    });
-  </script>
+<script type="module" src="https://public.tableau.com/javascripts/api/tableau.embedding.3.latest.min.js"></script>
+<script type="module" src="tableau-embed.js"></script>
+
 </body>
 </html>
-
 
