--- a/diet_fads.html
+++ b/diet_fads.html
@@ -37,19 +37,23 @@
     <p><strong>Peak Search Trend:</strong> <span id="diet-peak"></span></p>
   </section>
 
+  <div class="viz-wrapper">
   <tableau-viz
   id="tableauViz1"
   src="https://public.tableau.com/views/FadDietsandFoodImports/FadDietTrendsandUSimports"
   toolbar="bottom"
   hide-tabs
 ></tableau-viz>
+</div>
 
+<div class="viz-wrapper">
 <tableau-viz
   id="tableauViz2"
   src="https://public.tableau.com/views/GlobalandUSdiettrends/DietGeoTrends"
   toolbar="bottom"
   hide-tabs
 ></tableau-viz>
+</div>
 
 <script type="module" src="https://public.tableau.com/javascripts/api/tableau.embedding.3.latest.min.js"></script>
 <script type="module" src="tableau-embed.js"></script>
