--- a/demography_viz.html
+++ b/demography_viz.html
@@ -21,13 +21,12 @@
             display: felx;
         }
     </style>
-<!-- 
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Agricultural Land Decline and Caloric Supply Growth</title>
 <link rel="stylesheet" href="styles.css">
 <script src="https://d3js.org/d3.v6.min.js"></script>
-<script src="https://unpkg.com/scrollama"></script>-->
+<script src="https://unpkg.com/scrollama"></script>
 </head>
 <body>
 
