--- a/demography_viz.html
+++ b/demography_viz.html
@@ -4,7 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Demography Visualization</title>
-    <style>        
+    <style> 
+        body {
+              font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+              margin: 0;
+              padding: 2rem;
+              background-color: #fafafa;
+              color: #222;
+             }
+
+        header {
+          text-align: center;
+          padding: 2rem 0 1rem;
+        }   
+
+        h1 {
+          font-size: 2.8rem;
+          font-weight: 600;
+          margin-bottom: 0.5rem;
+        }
+
+        h2 {
+          font-size: 1.6rem;
+          margin-top: 3rem;
+        }
+
         .tableauPlaceholder {
             position: relative;
             opacity: 0; 
@@ -21,16 +45,20 @@
             display: felx;
         }
     </style>
+
 <meta charset="UTF-8">
+<!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Agricultural Land Decline and Caloric Supply Growth</title>
+<title>Demograhy Visualization</title>
 <link rel="stylesheet" href="styles.css">
+<!--
 <script src="https://d3js.org/d3.v6.min.js"></script>
-<script src="https://unpkg.com/scrollama"></script>
+<script src="https://unpkg.com/scrollama"></script> -->
 </head>
 <body>
 
 <!-- Navigation Bar -->
+
 <nav>
     <div class="nav-container">
         <a href="index.html">Home</a>
@@ -53,12 +81,18 @@
 </head>
 <body>
     <header>
-        <h1 style="color: black;font-family: Arial, sans-serif; font-size: 14;margin: 50px;padding: 20px;text-align: center;border-radius: 10px;border-style: solid; font-weight: bold">Explore demographic trends</h1>
+        <!--<h1 style="color: black;font-family: Arial, sans-serif; font-size: 14;margin: 50px;padding: 20px;text-align: center;border-radius: 10px;border-style: solid; font-weight: bold">Explore demographic trends</h1>-->
+        <h1 >Explore demographic trends</h1>
     </header>
+    <p style="font-family: Georgia, serif; font-size: 12;margin: 10px;padding: 20px;text-align: justify; text-justify: inter-word">
+        The goal of this visualization is to provide a tool to search for patterns and compare trends of average daily macronutrient consumption in United States across gender, race and age. Click on the buttons to select/deselect a demographic sector and use the scrollbar to select the nutrient you are interested in and visualize the exact average connsumption by hovering the cursor over the graphs. You can select multiple demographies by        
+        <button class="inline-button">
+            Ctrl+Click
+        </button>
+         
+    </p>
     <main>
         <div class='tableauPlaceholder' id='viz1744437456477' style='position: relative'><noscript><a href='#'><img alt='Demographics per age and race ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;vi&#47;viz_demography_v2&#47;Demographicsperageandrace&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='viz_demography_v2&#47;Demographicsperageandrace' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;vi&#47;viz_demography_v2&#47;Demographicsperageandrace&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1744437456477');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1000px';vizElement.style.height='827px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1000px';vizElement.style.height='827px';} else { vizElement.style.width='100%';vizElement.style.height='977px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
-        <p style="font-family: Georgia, serif; font-size: 12;margin: 50px;padding: 20px;text-align: justify; text-justify: inter-word">
-        The goal of this visualization is to provide a tool to search for patterns and discover trends of average daily macronutrient consumption in United States across gender, race and age. Click on the buttons to select/deselect a demographic sector and use the scrollbar to select the nutrient you are interested in. You can select multiple demographies by using ctrl+click and visualize the exact average connsumption by hovering the cursor over the graphs.</p>
     </main>
     <script>
         // Show image after 0.5 secs
@@ -69,5 +103,10 @@
             }, 250); // 0.25 secs
         };
     </script>
+    <!--
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    -->
 </body>
 </html>
