--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     		<a href="#member2" class="team-card">
         		<img src="Data/Andres.jpeg" alt="Andres">
         		<h3>Andres Nieto</h3>
-        		<p>MIDS student, XX term</p>
+        		<p>MIDS student, 2nd term</p>
     		</a>
     		<a href="#member3" class="team-card">
         		<img src="Data/Mike.png" alt="Mike">
@@ -49,7 +49,7 @@
     		<a href="#member4" class="team-card">
         		<img src="Data/Mauricio.png" alt="Mauricio">
         		<h3>Mauricio Perez</h3>
-        		<p>MIDS student, 3 term</p>
+        		<p>MIDS student, 3th term</p>
     		</a>
 	</div>
 
