adding link on all pages for Jason

--- a/diet_fads.html
+++ b/diet_fads.html
@@ -14,7 +14,7 @@
         <button class="dropbtn">Sections</button>
         <div class="dropdown-content" id="dropdown-menu">
           <a href="DataVizIndexProject.html">Caloric Supply</a>
-          <a href="datasci209.html">GDP & Calories</a>
+          <a href="caloric_gdp_map.html">GDP & Calories</a>
           <a href="demography_viz.html">Demographics</a>
           <a href="diet_fads.html">Diet Fads</a>
         </div>
