--- a/caloric_gdp_map.html
+++ b/caloric_gdp_map.html
@@ -1,5 +1,23 @@
 <html>
 <head><meta charset="utf-8" /></head>
+
+<!-- Navigation Bar -->
+
+<nav>
+    <div class="nav-container">
+        <a href="index.html">Home</a>
+        <div class="dropdown">
+            <button class="dropbtn">Sections</button>
+            <div class="dropdown-content" id="dropdown-menu">
+                <a href="DataVizIndexProject.html">Caloric Supply</a>
+                <a href="datasci209.html">GDP & Calories</a>
+                <a href="demography_viz.html">Demographics</a>
+                <a href="diet_fads.html">Diet Fads</a>
+            </div>
+        </div>
+    </div>
+</nav>
+
 <body>
     <div>                        <script type="text/javascript">window.PlotlyConfig = {MathJaxConfig: 'local'};</script>
         <script type="text/javascript">/**
