--- a/caloric_gdp_map.html
+++ b/caloric_gdp_map.html
@@ -1,5 +1,12 @@
 <html>
-<head><meta charset="utf-8" /></head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Project Webpage</title>
+        <link rel="stylesheet" href="styles.css">
+        <script src="https://d3js.org/d3.v6.min.js"></script>
+        <script src="https://unpkg.com/scrollama"></script>
+    </head>
 
 <!-- Navigation Bar -->
 
