Changing descriptions main page

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     		<a href="#member1" class="team-card">
         		<img src="Data/Jason.JPG" alt="Jason">
         		<h3>Jason Chang</h3>
-        		<p>MIDS student, XX term</p>
+        		<p>MIDS student, 3rd term</p>
     		</a>
     		<a href="#member2" class="team-card">
         		<img src="Data/Andres.jpeg" alt="Andres">
@@ -44,12 +44,12 @@
     		<a href="#member3" class="team-card">
         		<img src="Data/Mike.png" alt="Mike">
         		<h3>Mike Mandujano</h3>
-        		<p>MIDS student, XX term</p>
+        		<p>MIDS student, 3rd term</p>
     		</a>
     		<a href="#member4" class="team-card">
         		<img src="Data/Mauricio.png" alt="Mauricio">
         		<h3>Mauricio Perez</h3>
-        		<p>MIDS student, 3th term</p>
+        		<p>MIDS student, 3rd term</p>
     		</a>
 	</div>
 
@@ -73,23 +73,23 @@
         <div class="team-member step" id="member1">
             <img src="Data/Jason.JPG" alt="Jason Chang">
             <h2>Jason Chang</h2>
-            <p>Hi, my name is Jason. I'm exploring the link between economic prosperity and caloric consumption because understanding this relationship is crucial for international policy makers addressing food security and public health officials tackling nutrition-related disparities. Beyond this project, I'm deeply passionate about data science and corporate strategy. When I'm not immersed in data, you can find me training for my next upcoming marathon or playing golf. Feel free to check out some of my personal projects on my <a href = https://github.com/chan572> Github Profile </a> Click here to <a href="caloric_gdp_map.html">learn more about economic prosperity and caloric consumption here</a></p>
+            <p>Hi, my name is Jason. I'm exploring the link between economic prosperity and caloric consumption because understanding this relationship is crucial for international policy makers addressing food security and public health officials tackling nutrition-related disparities. Beyond this project, I'm deeply passionate about data science and corporate strategy. When I'm not immersed in data, you can find me training for my next upcoming marathon or playing golf. Feel free to check out some of my personal projects on my <a href = https://github.com/chan572> Github Profile </a> Click <a href="caloric_gdp_map.html"> here </a> to learn more about economic prosperity and caloric consumption</p>
         </div>
         <div class="team-member step" id="member2">
             <img src="Data/Andres.jpeg" alt="Andres Nieto">
             <h2>Andres Nieto</h2>
             <p>Hi, my name is Andres.  Data enthusiast focused on discovering trends and associations between the consumption of nutrients and demographic factors in America. Let’s explore the daily average ingest of proteins, carbs, fats, etc. across age, race and gender!
-                github page: <a href= "https://github.com/AndresNietoGuadarrama" > Andres' Github</a>  Click here to <a href="demography_viz.html"> learn more about Calorie consumption and how it varies by demographics here</a></p>
+                github page: <a href= "https://github.com/AndresNietoGuadarrama" > Andres' Github</a>  Click <a href="demography_viz.html"> here </a> to learn more about Calorie consumption and how it varies by demographics here</p>
         </div>
         <div class="team-member step" id="member3">
             <img src="Data/Mike.png" alt="Mike Mandujano">
             <h2>Mike Mandujano</h2>
-            <p>Hi, my name is Mike. I'm exploring how land usage, particularly when referring to agricultural use of land has affected global caloric supply and what this means regarding production efficiency and shift in land use priorities across the globe. This will help public policy makers understand the history and current effects on changes in our processes and allow them to make better decisions based on data. Aside from this project, my main interests lie in XXXX and YYYY <a href="DataVizIndexProject.html">Learn more about how land usage has affected our caloric production and consumption here</a></p>
+            <p>Hi, my name is Mike. I'm exploring how land usage, particularly when referring to agricultural use of land has affected global caloric supply and what this means regarding production efficiency and shift in land use priorities across the globe. This will help public policy makers understand the history and current effects on changes in our processes and allow them to make better decisions based on data. Learn more about how land usage has affected our caloric production and consumption <a href="DataVizIndexProject.html"></a>here</a></p>
         </div>
         <div class="team-member step" id="member4">
             <img src="Data/Mauricio.png" alt="Mauricio Perez">
             <h2>Mauricio Perez</h2>
-            <p>Hi, my name is Mauricio. I'm exploring how fad diets trends have shaped and changed the scenery on food based imports into the US and how the public in general has fluctuated their interests in different diets across the years. These visuals will help anyone with a passion to understand food and trends to understand the interaction between people's interests in fad diets and how that varies through time as well as if any impact is had on the quantities of food imported to the US. Aside from this project, my main interests lie in understanding how data and people interact in the workplace, with a special emphasis on people development. <a href="diet_fads.html">Learn more about fad diets here</a></p>
+            <p>Hi, my name is Mauricio. I'm exploring how fad diets trends have shaped and changed the scenery on food based imports into the US and how the public in general has fluctuated their interests in different diets across the years. These visuals will help anyone with a passion to understand food and trends to understand the interaction between people's interests in fad diets and how that varies through time as well as if any impact is had on the quantities of food imported to the US. Aside from this project, my main interests lie in understanding how data and people interact in the workplace, with a special emphasis on people development. Learn more about fad diets <a href="diet_fads.html"></a>here</a></p>
         </div>
     </section>
 
