--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
            <p>
                Food consumption and trends are dynamic, shaped by government policies, social media, cultural shifts, economic factors, and health movements. Dive in to understand food trends in the US! Our different sections will reveal patterns related to caloric consumption/intake, land usage, search trends, and nutritional evolution, gaining insights into the drivers of change and their implications for health, policy, and industry.
            </p>
+           <p> 
+            Use the navigation up top to go to your pages of interest, or scroll down to learn more about our team!
+           </p>
        </div>
        <div class="overview-image">
            <img src="Data/Food_Index.jpg" alt="Food Overview Image">
@@ -84,12 +87,12 @@
         <div class="team-member step" id="member3">
             <img src="Data/Mike.png" alt="Mike Mandujano">
             <h2>Mike Mandujano</h2>
-            <p>Hi, my name is Mike. I'm exploring how land usage, particularly when referring to agricultural use of land has affected global caloric supply and what this means regarding production efficiency and shift in land use priorities across the globe. This will help public policy makers understand the history and current effects on changes in our processes and allow them to make better decisions based on data. Learn more about how land usage has affected our caloric production and consumption <a href="DataVizIndexProject.html"></a>here</a></p>
+            <p>Hi, my name is Mike. I'm exploring how land usage, particularly when referring to agricultural use of land has affected global caloric supply and what this means regarding production efficiency and shift in land use priorities across the globe. This will help public policy makers understand the history and current effects on changes in our processes and allow them to make better decisions based on data. Learn more about how land usage has affected our caloric production and consumption <a href="DataVizIndexProject.html">here</a></p>
         </div>
         <div class="team-member step" id="member4">
             <img src="Data/Mauricio.png" alt="Mauricio Perez">
             <h2>Mauricio Perez</h2>
-            <p>Hi, my name is Mauricio. I'm exploring how fad diets trends have shaped and changed the scenery on food based imports into the US and how the public in general has fluctuated their interests in different diets across the years. These visuals will help anyone with a passion to understand food and trends to understand the interaction between people's interests in fad diets and how that varies through time as well as if any impact is had on the quantities of food imported to the US. Aside from this project, my main interests lie in understanding how data and people interact in the workplace, with a special emphasis on people development. Learn more about fad diets <a href="diet_fads.html"></a>here</a></p>
+            <p>Hi, my name is Mauricio. I'm exploring how fad diets trends have shaped and changed the scenery on food based imports into the US and how the public in general has fluctuated their interests in different diets across the years. These visuals will help anyone with a passion to understand food and trends to understand the interaction between people's interests in fad diets and how that varies through time as well as if any impact is had on the quantities of food imported to the US. Aside from this project, my main interests lie in understanding how data and people interact in the workplace, with a special emphasis on people development. Learn more about fad diets <a href="diet_fads.html">here</a></p>
         </div>
     </section>
 
