--- a/caloric_gdp_map.html
+++ b/caloric_gdp_map.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Project Webpage</title>
+        <title>Caloric consumption and GDP</title>
         <link rel="stylesheet" href="styles.css">
         <script src="https://d3js.org/d3.v6.min.js"></script>
         <script src="https://unpkg.com/scrollama"></script>
@@ -20,12 +20,18 @@
                 <a href="caloric_gdp_map.html">GDP & Calories</a>
                 <a href="demography_viz.html">Demographics</a>
                 <a href="diet_fads.html">Diet Fads</a>
+                <br>
+                <br>
             </div>
         </div>
     </div>
 </nav>
 
 <body>
+    <br>
+    <br>
+    <br>
+    <br>
     <div>                        <script type="text/javascript">window.PlotlyConfig = {MathJaxConfig: 'local'};</script>
         <script type="text/javascript">/**
 * plotly.js v2.12.1
