--- a/demography_viz.html
+++ b/demography_viz.html
@@ -66,7 +66,7 @@
             <button class="dropbtn">Sections</button>
             <div class="dropdown-content" id="dropdown-menu">
                 <a href="DataVizIndexProject.html">Caloric Supply</a>
-                <a href="datasci209.html">GDP & Calories</a>
+                <a href="caloric_gdp_map.html">GDP & Calories</a>
                 <a href="demography_viz.html">Demographics</a>
                 <a href="diet_fads.html">Diet Fads</a>
             </div>
@@ -85,22 +85,25 @@
         <h1 >Explore demographic trends</h1>
     </header>
     <p style="font-family: Georgia, serif; font-size: 12;margin: 10px;padding: 20px;text-align: justify; text-justify: inter-word">
-        The goal of this visualization is to provide a tool to search for patterns and compare trends of average daily macronutrient consumption in United States across gender, race and age. Click on the buttons to select/deselect a demographic sector and use the scrollbar to select the nutrient you are interested in and visualize the exact average connsumption by hovering the cursor over the graphs. You can select multiple demographies by        
+         Click on the buttons to select/deselect a demographic sector and use the scrollbar to select the nutrient you are interested in and visualize the exact average connsumption by hovering the cursor over the graphs. You can select multiple demographies by        
         <button class="inline-button">
             Ctrl+Click
         </button>
          
     </p>
     <main>
-        <div class='tableauPlaceholder' id='viz1744449271219' style='position: relative'><noscript><a href='#'><img alt='Demographics per age and race ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;vi&#47;viz_demography_v2&#47;Demographicsperageandrace&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='viz_demography_v2&#47;Demographicsperageandrace' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;vi&#47;viz_demography_v2&#47;Demographicsperageandrace&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='es-ES' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1744449271219');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1000px';vizElement.style.height='827px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1000px';vizElement.style.height='827px';} else { vizElement.style.width='100%';vizElement.style.height='927px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+        <div class='tableauPlaceholder' id='viz1744449271219' style='position: relative'><noscript><a href='#'><img alt='Demographics per age and race ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;vi&#47;viz_demography_v2&#47;Demographicsperageandrace&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='viz_demography_v2&#47;Demographicsperageandrace' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;vi&#47;viz_demography_v2&#47;Demographicsperageandrace&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='es-ES' /><param name='filter' value='publish=yes' /></object></div>                
+        <script type='text/javascript'>                    var divElement = document.getElementById('viz1744449271219');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1000px';vizElement.style.height='827px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1000px';vizElement.style.height='827px';} else { vizElement.style.width='100%';vizElement.style.height='927px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                
+    </script>
     </main>
+
     <script>
         // Show image after 0.5 secs
         window.onload = function() {
             setTimeout(() => {
                 const imageContainer = document.getElementById('viz1744449271219');
                 imageContainer.style.opacity = 1; // Show image
-            }, 250); // 0.25 secs
+            }, 50); // 0.05 secs
         };
     </script>
     <!--
