--- a/DataVizIndexProject.html
+++ b/DataVizIndexProject.html
@@ -42,9 +42,9 @@
 
     iframe, .tableauPlaceholder {
       width: 100%;
-      height: 800px;
+      height: 90vh; /* 90% of the viewport height */
       border: none;
-      margin: 2rem 0;
+      margin: 0 auto;
     }
 
     .section {
@@ -135,7 +135,7 @@
       var divElement = document.getElementById('viz1742877836688');
       var vizElement = divElement.getElementsByTagName('object')[0];
       vizElement.style.width = '100%';
-      vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px';
+      vizElement.style.height = window.innerHeight * 0.9 + 'px';
       var scriptElement = document.createElement('script');
       scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
       vizElement.parentNode.insertBefore(scriptElement, vizElement);
