adding description on diet fads

--- a/diet_fads.html
+++ b/diet_fads.html
@@ -24,7 +24,11 @@
 
   <section class="intro">
     <h1>Take a deep-dive into the top 10 fad diets in the last decade!</h1>
+    <p class="intro-description">
+      Please select one of the diets you're interested in! We'll showcase the main components of the diet, a bit of history on it, and the main foods associated with it. Below this, you'll also see a few visuals on Tableau that you can interact with — you can compare between diets, take a look into the different foods that are imported into the US, and also where in the US and the world the different diets are most popular! Feel free to explore below by starting with choosing a diet!
+    </p>
   </section>
+  
 
   <section class="diet-list" id="diet-buttons"></section>
 
