--- a/demography_viz.html
+++ b/demography_viz.html
@@ -96,7 +96,9 @@
         <script type='text/javascript'>                    var divElement = document.getElementById('viz1744449271219');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1000px';vizElement.style.height='827px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1000px';vizElement.style.height='827px';} else { vizElement.style.width='100%';vizElement.style.height='927px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                
     </script>
     </main>
-
+    <p style="font-family: Georgia, serif; font-size: 12;margin: 10px;padding: 20px;text-align: justify; text-justify: inter-word">
+        You can consult the documentation and the public dataset for this visualization <a href="https://www.ars.usda.gov/northeast-area/beltsville-md-bhnrc/beltsville-human-nutrition-research-center/food-surveys-research-group/docs/wweia-documentation-and-data-sets/"> here </a>
+    </p> 
     <script>
         // Show image after 0.5 secs
         window.onload = function() {
